[package]
name = "strike-wallet"
version = "0.0.1"
edition = "2021"
publish = false
resolver = "2"

[dependencies]
bytes = "1.1.0"
arrayref = "0.3.6"
bitvec = "1.0"
itertools = "0.10.3"
solana-program = "=1.11.2"
spl-associated-token-account = { version = "=1.0.5", features = ["no-entrypoint"] }
spl-token = "=3.3.0"
thiserror = "1.0.31"

[features]
test-bpf = []
no-entrypoint = []

[dev-dependencies]
assert_matches = "1.5.0"
sha2 = "0.10.2"
solana-program-test = "=1.11.2"
solana-sdk = "=1.11.2"
solana-validator = "=1.11.2"
uuid = { version = "1.1.2", features = ["v4"] }

[lib]
crate-type = ["cdylib", "lib"]
